#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(DOME, 4.80ar.02, adrian@antiprism.com)
AM_INIT_AUTOMAKE([1.9 foreign])
AC_CONFIG_SRCDIR([src/Offsave.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([floor pow])

AC_OUTPUT(Makefile src/Makefile)
